// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`structs/kernel serializes and prints CombinedAccumulatedData 1`] = `
"aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
encrypted_logs_hash:
[ 0x601 0x602 ]
unencrypted_logs_hash:
[ 0x701 0x702 ]
encrypted_log_preimages_length:
0x801
unencrypted_log_preimages_length:
0x901
new_contracts:
[ contract_address: 0xa01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xa03
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0xb01
function_data:
function_selector: b02
is_private: 1
is_constructor: 1

vk_hash: 0xb03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb02
function_data:
function_selector: b03
is_private: 1
is_constructor: 1

vk_hash: 0xb04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb03
function_data:
function_selector: b04
is_private: 1
is_constructor: 1

vk_hash: 0xb05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb04
function_data:
function_selector: b05
is_private: 1
is_constructor: 1

vk_hash: 0xb06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 ]
public_data_reads:
[ leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 ]
"
`;

exports[`structs/kernel serializes and prints EcdsaSignature 1`] = `"{ 0101010101010101010101010101010101010101010101010101010101010101, 0202020202020202020202020202020202020202020202020202020202020202, 3 }"`;

exports[`structs/kernel serializes and prints SignedTxRequest 1`] = `
"tx_request:
from: 0x1
to: 0x11
function_data: function_selector: 257
is_private: 1
is_constructor: 1

args_hash: 0x201
nonce: 0x301
tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x401
function_tree_root: 0x402
contract_address_salt: 0x403
portal_contract_address: 0x404040404040404040404040404040404040404

chain_id: 0x501

signature: { 0101010101010101010101010101010101010101010101010101010101010101, 0202020202020202020202020202020202020202020202020202020202020202, 3 }
"
`;

exports[`structs/kernel serializes and prints previous_kernel_data 1`] = `
"public_inputs: end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
encrypted_logs_hash:
[ 0x601 0x602 ]
unencrypted_logs_hash:
[ 0x701 0x702 ]
encrypted_log_preimages_length:
0x801
unencrypted_log_preimages_length:
0x901
new_contracts:
[ contract_address: 0xa01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xa03
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0xb01
function_data:
function_selector: b02
is_private: 1
is_constructor: 1

vk_hash: 0xb03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb02
function_data:
function_selector: b03
is_private: 1
is_constructor: 1

vk_hash: 0xb04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb03
function_data:
function_selector: b04
is_private: 1
is_constructor: 1

vk_hash: 0xb05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb04
function_data:
function_selector: b05
is_private: 1
is_constructor: 1

vk_hash: 0xb06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 ]
public_data_reads:
[ leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x105
function_tree_root: 0x106
contract_address_salt: 0x107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]
"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs_init 1`] = `
"signed_tx_request:
tx_request:
from: 0x1
to: 0x11
function_data: function_selector: 257
is_private: 1
is_constructor: 1

args_hash: 0x201
nonce: 0x301
tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x401
function_tree_root: 0x402
contract_address_salt: 0x403
portal_contract_address: 0x404040404040404040404040404040404040404

chain_id: 0x501

signature: { 0101010101010101010101010101010101010101010101010101010101010101, 0202020202020202020202020202020202020202020202020202020202020202, 3 }

private_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1012
storage_contract_address: 0x1013
portal_contract_address: 0x1014
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1111
return_values: [ 0x1311 0x1312 0x1313 0x1314 ]
new_commitments: [ 0x1411 0x1412 0x1413 0x1414 ]
new_nullifiers: [ 0x1511 0x1512 0x1513 0x1514 ]
private_call_stack: [ 0x1611 0x1612 0x1613 0x1614 ]
public_call_stack: [ 0x1711 0x1712 0x1713 0x1714 ]
new_l2_to_l1_msgs: [ 0x1811 0x1812 ]
encrypted_logs_hash: [ 0x1911 0x1912 ]
unencrypted_logs_hash: [ 0x1a11 0x1a12 ]
encrypted_log_preimages_length: 0x1b11
unencrypted_log_preimages_length: 0x1c11
historic_private_data_tree_root: 0x1e11
historic_nullifier_tree_root: 0x1f11
historic_contract_tree_root: 0x1d11
historic_l1_to_l2_messages_tree_root: 0x2011
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0

private_call_stack_preimages:
[ contract_address: 0x1011
function_data: function_selector: 1012
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1022
storage_contract_address: 0x1023
portal_contract_address: 0x1024
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1121
return_values: [ 0x1321 0x1322 0x1323 0x1324 ]
new_commitments: [ 0x1421 0x1422 0x1423 0x1424 ]
new_nullifiers: [ 0x1521 0x1522 0x1523 0x1524 ]
private_call_stack: [ 0x1621 0x1622 0x1623 0x1624 ]
public_call_stack: [ 0x1721 0x1722 0x1723 0x1724 ]
new_l2_to_l1_msgs: [ 0x1821 0x1822 ]
encrypted_logs_hash: [ 0x1921 0x1922 ]
unencrypted_logs_hash: [ 0x1a21 0x1a22 ]
encrypted_log_preimages_length: 0x1b21
unencrypted_log_preimages_length: 0x1c21
historic_private_data_tree_root: 0x1e21
historic_nullifier_tree_root: 0x1f21
historic_contract_tree_root: 0x1d21
historic_l1_to_l2_messages_tree_root: 0x2021
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1012
function_data: function_selector: 1013
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1023
storage_contract_address: 0x1024
portal_contract_address: 0x1025
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1122
return_values: [ 0x1322 0x1323 0x1324 0x1325 ]
new_commitments: [ 0x1422 0x1423 0x1424 0x1425 ]
new_nullifiers: [ 0x1522 0x1523 0x1524 0x1525 ]
private_call_stack: [ 0x1622 0x1623 0x1624 0x1625 ]
public_call_stack: [ 0x1722 0x1723 0x1724 0x1725 ]
new_l2_to_l1_msgs: [ 0x1822 0x1823 ]
encrypted_logs_hash: [ 0x1922 0x1923 ]
unencrypted_logs_hash: [ 0x1a22 0x1a23 ]
encrypted_log_preimages_length: 0x1b22
unencrypted_log_preimages_length: 0x1c22
historic_private_data_tree_root: 0x1e22
historic_nullifier_tree_root: 0x1f22
historic_contract_tree_root: 0x1d22
historic_l1_to_l2_messages_tree_root: 0x2022
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1013
function_data: function_selector: 1014
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1024
storage_contract_address: 0x1025
portal_contract_address: 0x1026
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1123
return_values: [ 0x1323 0x1324 0x1325 0x1326 ]
new_commitments: [ 0x1423 0x1424 0x1425 0x1426 ]
new_nullifiers: [ 0x1523 0x1524 0x1525 0x1526 ]
private_call_stack: [ 0x1623 0x1624 0x1625 0x1626 ]
public_call_stack: [ 0x1723 0x1724 0x1725 0x1726 ]
new_l2_to_l1_msgs: [ 0x1823 0x1824 ]
encrypted_logs_hash: [ 0x1923 0x1924 ]
unencrypted_logs_hash: [ 0x1a23 0x1a24 ]
encrypted_log_preimages_length: 0x1b23
unencrypted_log_preimages_length: 0x1c23
historic_private_data_tree_root: 0x1e23
historic_nullifier_tree_root: 0x1f23
historic_contract_tree_root: 0x1d23
historic_l1_to_l2_messages_tree_root: 0x2023
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1014
function_data: function_selector: 1015
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1025
storage_contract_address: 0x1026
portal_contract_address: 0x1027
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1124
return_values: [ 0x1324 0x1325 0x1326 0x1327 ]
new_commitments: [ 0x1424 0x1425 0x1426 0x1427 ]
new_nullifiers: [ 0x1524 0x1525 0x1526 0x1527 ]
private_call_stack: [ 0x1624 0x1625 0x1626 0x1627 ]
public_call_stack: [ 0x1724 0x1725 0x1726 0x1727 ]
new_l2_to_l1_msgs: [ 0x1824 0x1825 ]
encrypted_logs_hash: [ 0x1924 0x1925 ]
unencrypted_logs_hash: [ 0x1a24 0x1a25 ]
encrypted_log_preimages_length: 0x1b24
unencrypted_log_preimages_length: 0x1c24
historic_private_data_tree_root: 0x1e24
historic_nullifier_tree_root: 0x1f24
historic_contract_tree_root: 0x1d24
historic_l1_to_l2_messages_tree_root: 0x2024
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 ]
proof:
[ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness:
leaf_index: 0x1031
sibling_path: [ 0x1031 0x1032 0x1033 0x1034 ]

contract_leaf_membership_witness:
leaf_index: 0x1021
sibling_path: [ 0x1021 0x1022 0x1023 0x1024 0x1025 0x1026 0x1027 0x1028 ]

portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x1061

"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs_inner 1`] = `
"previous_kernel:
public_inputs: end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
encrypted_logs_hash:
[ 0x601 0x602 ]
unencrypted_logs_hash:
[ 0x701 0x702 ]
encrypted_log_preimages_length:
0x801
unencrypted_log_preimages_length:
0x901
new_contracts:
[ contract_address: 0xa01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xa03
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0xb01
function_data:
function_selector: b02
is_private: 1
is_constructor: 1

vk_hash: 0xb03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb02
function_data:
function_selector: b03
is_private: 1
is_constructor: 1

vk_hash: 0xb04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb03
function_data:
function_selector: b04
is_private: 1
is_constructor: 1

vk_hash: 0xb05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb04
function_data:
function_selector: b05
is_private: 1
is_constructor: 1

vk_hash: 0xb06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 ]
public_data_reads:
[ leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x105
function_tree_root: 0x106
contract_address_salt: 0x107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

private_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1012
storage_contract_address: 0x1013
portal_contract_address: 0x1014
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1111
return_values: [ 0x1311 0x1312 0x1313 0x1314 ]
new_commitments: [ 0x1411 0x1412 0x1413 0x1414 ]
new_nullifiers: [ 0x1511 0x1512 0x1513 0x1514 ]
private_call_stack: [ 0x1611 0x1612 0x1613 0x1614 ]
public_call_stack: [ 0x1711 0x1712 0x1713 0x1714 ]
new_l2_to_l1_msgs: [ 0x1811 0x1812 ]
encrypted_logs_hash: [ 0x1911 0x1912 ]
unencrypted_logs_hash: [ 0x1a11 0x1a12 ]
encrypted_log_preimages_length: 0x1b11
unencrypted_log_preimages_length: 0x1c11
historic_private_data_tree_root: 0x1e11
historic_nullifier_tree_root: 0x1f11
historic_contract_tree_root: 0x1d11
historic_l1_to_l2_messages_tree_root: 0x2011
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0

private_call_stack_preimages:
[ contract_address: 0x1011
function_data: function_selector: 1012
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1022
storage_contract_address: 0x1023
portal_contract_address: 0x1024
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1121
return_values: [ 0x1321 0x1322 0x1323 0x1324 ]
new_commitments: [ 0x1421 0x1422 0x1423 0x1424 ]
new_nullifiers: [ 0x1521 0x1522 0x1523 0x1524 ]
private_call_stack: [ 0x1621 0x1622 0x1623 0x1624 ]
public_call_stack: [ 0x1721 0x1722 0x1723 0x1724 ]
new_l2_to_l1_msgs: [ 0x1821 0x1822 ]
encrypted_logs_hash: [ 0x1921 0x1922 ]
unencrypted_logs_hash: [ 0x1a21 0x1a22 ]
encrypted_log_preimages_length: 0x1b21
unencrypted_log_preimages_length: 0x1c21
historic_private_data_tree_root: 0x1e21
historic_nullifier_tree_root: 0x1f21
historic_contract_tree_root: 0x1d21
historic_l1_to_l2_messages_tree_root: 0x2021
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1012
function_data: function_selector: 1013
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1023
storage_contract_address: 0x1024
portal_contract_address: 0x1025
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1122
return_values: [ 0x1322 0x1323 0x1324 0x1325 ]
new_commitments: [ 0x1422 0x1423 0x1424 0x1425 ]
new_nullifiers: [ 0x1522 0x1523 0x1524 0x1525 ]
private_call_stack: [ 0x1622 0x1623 0x1624 0x1625 ]
public_call_stack: [ 0x1722 0x1723 0x1724 0x1725 ]
new_l2_to_l1_msgs: [ 0x1822 0x1823 ]
encrypted_logs_hash: [ 0x1922 0x1923 ]
unencrypted_logs_hash: [ 0x1a22 0x1a23 ]
encrypted_log_preimages_length: 0x1b22
unencrypted_log_preimages_length: 0x1c22
historic_private_data_tree_root: 0x1e22
historic_nullifier_tree_root: 0x1f22
historic_contract_tree_root: 0x1d22
historic_l1_to_l2_messages_tree_root: 0x2022
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1013
function_data: function_selector: 1014
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1024
storage_contract_address: 0x1025
portal_contract_address: 0x1026
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1123
return_values: [ 0x1323 0x1324 0x1325 0x1326 ]
new_commitments: [ 0x1423 0x1424 0x1425 0x1426 ]
new_nullifiers: [ 0x1523 0x1524 0x1525 0x1526 ]
private_call_stack: [ 0x1623 0x1624 0x1625 0x1626 ]
public_call_stack: [ 0x1723 0x1724 0x1725 0x1726 ]
new_l2_to_l1_msgs: [ 0x1823 0x1824 ]
encrypted_logs_hash: [ 0x1923 0x1924 ]
unencrypted_logs_hash: [ 0x1a23 0x1a24 ]
encrypted_log_preimages_length: 0x1b23
unencrypted_log_preimages_length: 0x1c23
historic_private_data_tree_root: 0x1e23
historic_nullifier_tree_root: 0x1f23
historic_contract_tree_root: 0x1d23
historic_l1_to_l2_messages_tree_root: 0x2023
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1014
function_data: function_selector: 1015
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1025
storage_contract_address: 0x1026
portal_contract_address: 0x1027
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1124
return_values: [ 0x1324 0x1325 0x1326 0x1327 ]
new_commitments: [ 0x1424 0x1425 0x1426 0x1427 ]
new_nullifiers: [ 0x1524 0x1525 0x1526 0x1527 ]
private_call_stack: [ 0x1624 0x1625 0x1626 0x1627 ]
public_call_stack: [ 0x1724 0x1725 0x1726 0x1727 ]
new_l2_to_l1_msgs: [ 0x1824 0x1825 ]
encrypted_logs_hash: [ 0x1924 0x1925 ]
unencrypted_logs_hash: [ 0x1a24 0x1a25 ]
encrypted_log_preimages_length: 0x1b24
unencrypted_log_preimages_length: 0x1c24
historic_private_data_tree_root: 0x1e24
historic_nullifier_tree_root: 0x1f24
historic_contract_tree_root: 0x1d24
historic_l1_to_l2_messages_tree_root: 0x2024
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 ]
proof:
[ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness:
leaf_index: 0x1031
sibling_path: [ 0x1031 0x1032 0x1033 0x1034 ]

contract_leaf_membership_witness:
leaf_index: 0x1021
sibling_path: [ 0x1021 0x1022 0x1023 0x1024 0x1025 0x1026 0x1027 0x1028 ]

portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x1061

"
`;

exports[`structs/kernel serializes and prints private_kernel_public_inputs 1`] = `
"end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
encrypted_logs_hash:
[ 0x601 0x602 ]
unencrypted_logs_hash:
[ 0x701 0x702 ]
encrypted_log_preimages_length:
0x801
unencrypted_log_preimages_length:
0x901
new_contracts:
[ contract_address: 0xa01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xa03
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0xb01
function_data:
function_selector: b02
is_private: 1
is_constructor: 1

vk_hash: 0xb03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb02
function_data:
function_selector: b03
is_private: 1
is_constructor: 1

vk_hash: 0xb04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb03
function_data:
function_selector: b04
is_private: 1
is_constructor: 1

vk_hash: 0xb05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb04
function_data:
function_selector: b05
is_private: 1
is_constructor: 1

vk_hash: 0xb06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 ]
public_data_reads:
[ leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x105
function_tree_root: 0x106
contract_address_salt: 0x107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1
"
`;

exports[`structs/kernel serializes and prints public_kernel_inputs 1`] = `
"previous_kernel:
public_inputs: end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
encrypted_logs_hash:
[ 0x601 0x602 ]
unencrypted_logs_hash:
[ 0x701 0x702 ]
encrypted_log_preimages_length:
0x801
unencrypted_log_preimages_length:
0x901
new_contracts:
[ contract_address: 0xa01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xa03
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0xb01
function_data:
function_selector: b02
is_private: 1
is_constructor: 1

vk_hash: 0xb03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb02
function_data:
function_selector: b03
is_private: 1
is_constructor: 1

vk_hash: 0xb04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb03
function_data:
function_selector: b04
is_private: 1
is_constructor: 1

vk_hash: 0xb05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xb04
function_data:
function_selector: b05
is_private: 1
is_constructor: 1

vk_hash: 0xb06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 leaf_index: 0x0
old_value: 0x0
new_value: 0x0
 ]
public_data_reads:
[ leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 leaf_index: 0x0
value: 0x0
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x105
function_tree_root: 0x106
contract_address_salt: 0x107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

public_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1011
storage_contract_address: 0x1001
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x1213 0x1214 ]
contract_storage_update_requests: [ storage_slot: 0x1311
old_value: 0x1312
new_value: 0x1313
 storage_slot: 0x1312
old_value: 0x1313
new_value: 0x1314
 storage_slot: 0x1313
old_value: 0x1314
new_value: 0x1315
 storage_slot: 0x1314
old_value: 0x1315
new_value: 0x1316
 ]
contract_storage_reads: [ storage_slot: 0x1411
current_value: 0x1412
 storage_slot: 0x1412
current_value: 0x1413
 storage_slot: 0x1413
current_value: 0x1414
 storage_slot: 0x1414
current_value: 0x1415
 ]
public_call_stack: [ 0xa24bbd453c9c72fefe59b700c7fd0860437e8601152894ee13036949516a5ef 0x1c915ca42f144754769a0c3ce077046dfd43db78fc368a47264edcb4252a3cda 0x684c91d96a8d6b8a1a1e88a66a31cc8420c2fa73916efd88392c5ffc8daf0f 0x24715e28594f5dca6d420feb22ed1605c7dd55885a842b899902924e429aa766 ]
new_l2_to_l1_msgs: [ 0x1611 0x1612 ]
historic_public_data_tree_root: 0x1711
prover_address: 0x1811

is_execution_request: 0

public_call_stack_preimages:
[ contract_address: 0x1301
function_data: function_selector: 1302
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1301
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1411
return_values: [ 0x1511 0x1512 0x1513 0x1514 ]
contract_storage_update_requests: [ storage_slot: 0x1611
old_value: 0x1612
new_value: 0x1613
 storage_slot: 0x1612
old_value: 0x1613
new_value: 0x1614
 storage_slot: 0x1613
old_value: 0x1614
new_value: 0x1615
 storage_slot: 0x1614
old_value: 0x1615
new_value: 0x1616
 ]
contract_storage_reads: [ storage_slot: 0x1711
current_value: 0x1712
 storage_slot: 0x1712
current_value: 0x1713
 storage_slot: 0x1713
current_value: 0x1714
 storage_slot: 0x1714
current_value: 0x1715
 ]
public_call_stack: [ 0x1811 0x1812 0x1813 0x1814 ]
new_l2_to_l1_msgs: [ 0x1911 0x1912 ]
historic_public_data_tree_root: 0x1a11
prover_address: 0x1b11

is_execution_request: 0
 contract_address: 0x1302
function_data: function_selector: 1303
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1302
portal_contract_address: 0x1414141414141414141414141414141414141414
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1412
return_values: [ 0x1512 0x1513 0x1514 0x1515 ]
contract_storage_update_requests: [ storage_slot: 0x1612
old_value: 0x1613
new_value: 0x1614
 storage_slot: 0x1613
old_value: 0x1614
new_value: 0x1615
 storage_slot: 0x1614
old_value: 0x1615
new_value: 0x1616
 storage_slot: 0x1615
old_value: 0x1616
new_value: 0x1617
 ]
contract_storage_reads: [ storage_slot: 0x1712
current_value: 0x1713
 storage_slot: 0x1713
current_value: 0x1714
 storage_slot: 0x1714
current_value: 0x1715
 storage_slot: 0x1715
current_value: 0x1716
 ]
public_call_stack: [ 0x1812 0x1813 0x1814 0x1815 ]
new_l2_to_l1_msgs: [ 0x1912 0x1913 ]
historic_public_data_tree_root: 0x1a12
prover_address: 0x1b12

is_execution_request: 0
 contract_address: 0x1303
function_data: function_selector: 1304
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1303
portal_contract_address: 0x1515151515151515151515151515151515151515
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1413
return_values: [ 0x1513 0x1514 0x1515 0x1516 ]
contract_storage_update_requests: [ storage_slot: 0x1613
old_value: 0x1614
new_value: 0x1615
 storage_slot: 0x1614
old_value: 0x1615
new_value: 0x1616
 storage_slot: 0x1615
old_value: 0x1616
new_value: 0x1617
 storage_slot: 0x1616
old_value: 0x1617
new_value: 0x1618
 ]
contract_storage_reads: [ storage_slot: 0x1713
current_value: 0x1714
 storage_slot: 0x1714
current_value: 0x1715
 storage_slot: 0x1715
current_value: 0x1716
 storage_slot: 0x1716
current_value: 0x1717
 ]
public_call_stack: [ 0x1813 0x1814 0x1815 0x1816 ]
new_l2_to_l1_msgs: [ 0x1913 0x1914 ]
historic_public_data_tree_root: 0x1a13
prover_address: 0x1b13

is_execution_request: 0
 contract_address: 0x1304
function_data: function_selector: 1305
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1304
portal_contract_address: 0x1616161616161616161616161616161616161616
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1414
return_values: [ 0x1514 0x1515 0x1516 0x1517 ]
contract_storage_update_requests: [ storage_slot: 0x1614
old_value: 0x1615
new_value: 0x1616
 storage_slot: 0x1615
old_value: 0x1616
new_value: 0x1617
 storage_slot: 0x1616
old_value: 0x1617
new_value: 0x1618
 storage_slot: 0x1617
old_value: 0x1618
new_value: 0x1619
 ]
contract_storage_reads: [ storage_slot: 0x1714
current_value: 0x1715
 storage_slot: 0x1715
current_value: 0x1716
 storage_slot: 0x1716
current_value: 0x1717
 storage_slot: 0x1717
current_value: 0x1718
 ]
public_call_stack: [ 0x1814 0x1815 0x1816 0x1817 ]
new_l2_to_l1_msgs: [ 0x1914 0x1915 ]
historic_public_data_tree_root: 0x1a14
prover_address: 0x1b14

is_execution_request: 0
 ]
proof:
[ 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 ]
portal_contract_address: 0x1002
bytecode_hash: 0x1003

"
`;

exports[`structs/kernel serializes and prints public_kernel_inputs_no_previous_kernel 1`] = `
"signed_tx_request:
tx_request:
from: 0x1
to: 0x11
function_data: function_selector: 257
is_private: 1
is_constructor: 1

args_hash: 0x201
nonce: 0x301
tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x401
function_tree_root: 0x402
contract_address_salt: 0x403
portal_contract_address: 0x404040404040404040404040404040404040404

chain_id: 0x501

signature: { 0101010101010101010101010101010101010101010101010101010101010101, 0202020202020202020202020202020202020202020202020202020202020202, 3 }

public_call:
call_stack_item:
contract_address: 0x101
function_data: function_selector: 258
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x111
storage_contract_address: 0x101
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x211
return_values: [ 0x311 0x312 0x313 0x314 ]
contract_storage_update_requests: [ storage_slot: 0x411
old_value: 0x412
new_value: 0x413
 storage_slot: 0x412
old_value: 0x413
new_value: 0x414
 storage_slot: 0x413
old_value: 0x414
new_value: 0x415
 storage_slot: 0x414
old_value: 0x415
new_value: 0x416
 ]
contract_storage_reads: [ storage_slot: 0x511
current_value: 0x512
 storage_slot: 0x512
current_value: 0x513
 storage_slot: 0x513
current_value: 0x514
 storage_slot: 0x514
current_value: 0x515
 ]
public_call_stack: [ 0x9eaa50a1db4b16026bd42688a6693644083e7ebef58ee202b4bd6245e33fe2e 0x77b30f928d3ea35e53e45243a75b7a202f6092118019ad4ca263300dd1bea79 0x4060ca6b73237f8f21893a18154289d47f53948604bf1e47de08298742ef970 0x16274ced9120baf8e6ed29622321d0eeae56e0da5481acea82456d745cf2c719 ]
new_l2_to_l1_msgs: [ 0x711 0x712 ]
historic_public_data_tree_root: 0x811
prover_address: 0x911

is_execution_request: 0

public_call_stack_preimages:
[ contract_address: 0x401
function_data: function_selector: 402
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x101
storage_contract_address: 0x401
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x511
return_values: [ 0x611 0x612 0x613 0x614 ]
contract_storage_update_requests: [ storage_slot: 0x711
old_value: 0x712
new_value: 0x713
 storage_slot: 0x712
old_value: 0x713
new_value: 0x714
 storage_slot: 0x713
old_value: 0x714
new_value: 0x715
 storage_slot: 0x714
old_value: 0x715
new_value: 0x716
 ]
contract_storage_reads: [ storage_slot: 0x811
current_value: 0x812
 storage_slot: 0x812
current_value: 0x813
 storage_slot: 0x813
current_value: 0x814
 storage_slot: 0x814
current_value: 0x815
 ]
public_call_stack: [ 0x911 0x912 0x913 0x914 ]
new_l2_to_l1_msgs: [ 0xa11 0xa12 ]
historic_public_data_tree_root: 0xb11
prover_address: 0xc11

is_execution_request: 0
 contract_address: 0x402
function_data: function_selector: 403
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x101
storage_contract_address: 0x402
portal_contract_address: 0x1414141414141414141414141414141414141414
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x512
return_values: [ 0x612 0x613 0x614 0x615 ]
contract_storage_update_requests: [ storage_slot: 0x712
old_value: 0x713
new_value: 0x714
 storage_slot: 0x713
old_value: 0x714
new_value: 0x715
 storage_slot: 0x714
old_value: 0x715
new_value: 0x716
 storage_slot: 0x715
old_value: 0x716
new_value: 0x717
 ]
contract_storage_reads: [ storage_slot: 0x812
current_value: 0x813
 storage_slot: 0x813
current_value: 0x814
 storage_slot: 0x814
current_value: 0x815
 storage_slot: 0x815
current_value: 0x816
 ]
public_call_stack: [ 0x912 0x913 0x914 0x915 ]
new_l2_to_l1_msgs: [ 0xa12 0xa13 ]
historic_public_data_tree_root: 0xb12
prover_address: 0xc12

is_execution_request: 0
 contract_address: 0x403
function_data: function_selector: 404
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x101
storage_contract_address: 0x403
portal_contract_address: 0x1515151515151515151515151515151515151515
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x513
return_values: [ 0x613 0x614 0x615 0x616 ]
contract_storage_update_requests: [ storage_slot: 0x713
old_value: 0x714
new_value: 0x715
 storage_slot: 0x714
old_value: 0x715
new_value: 0x716
 storage_slot: 0x715
old_value: 0x716
new_value: 0x717
 storage_slot: 0x716
old_value: 0x717
new_value: 0x718
 ]
contract_storage_reads: [ storage_slot: 0x813
current_value: 0x814
 storage_slot: 0x814
current_value: 0x815
 storage_slot: 0x815
current_value: 0x816
 storage_slot: 0x816
current_value: 0x817
 ]
public_call_stack: [ 0x913 0x914 0x915 0x916 ]
new_l2_to_l1_msgs: [ 0xa13 0xa14 ]
historic_public_data_tree_root: 0xb13
prover_address: 0xc13

is_execution_request: 0
 contract_address: 0x404
function_data: function_selector: 405
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x101
storage_contract_address: 0x404
portal_contract_address: 0x1616161616161616161616161616161616161616
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x514
return_values: [ 0x614 0x615 0x616 0x617 ]
contract_storage_update_requests: [ storage_slot: 0x714
old_value: 0x715
new_value: 0x716
 storage_slot: 0x715
old_value: 0x716
new_value: 0x717
 storage_slot: 0x716
old_value: 0x717
new_value: 0x718
 storage_slot: 0x717
old_value: 0x718
new_value: 0x719
 ]
contract_storage_reads: [ storage_slot: 0x814
current_value: 0x815
 storage_slot: 0x815
current_value: 0x816
 storage_slot: 0x816
current_value: 0x817
 storage_slot: 0x817
current_value: 0x818
 ]
public_call_stack: [ 0x914 0x915 0x916 0x917 ]
new_l2_to_l1_msgs: [ 0xa14 0xa15 ]
historic_public_data_tree_root: 0xb14
prover_address: 0xc14

is_execution_request: 0
 ]
proof:
[ 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 ]
portal_contract_address: 0x102
bytecode_hash: 0x103

historic_tree_roots:
private_historic_tree_roots: private_data_tree_root: 0x201
nullifier_tree_root: 0x202
contract_tree_root: 0x203
l1_to_l2_messages_tree_root: 0x204
private_kernel_vk_tree_root: 0x205


"
`;
